# CYRBD

./: .gitignore  CMakeLists.txt  RBD.cpp  RBD.h  RBD.py  README.md  availability_evaluation.py  benchmark_test.py  benckmark_test.py  cutset.py  cutsets.py  mainMultiprocessing.py  mainMultithreading.py  minimal_cut_set.json  requirement.txt  simple_graph.json
include/: benchmark.h  rbd.h  rbd_bool.h  rbd_utility.h  utility.h
results/: Abilene_availability_cpp.csv  Abilene_benchmark.csv  Abilene_benchmark_v2.csv  Germany_17_availability_cpp.csv  Germany_17_benchmark.csv  Germany_17_benchmark_v2.csv  Germany_50_benchmark_with_mincutset.csv  HiberniaUk_availability_cpp.csv  HiberniaUk_benchmark.csv  HiberniaUk_benchmark_v2.csv  Nobel_EU50_benchmark_with_mincutset.csv  Nobel_EU_benchmark_with_mincutset.csv  dfn-bwin_availability_cpp.csv  dfn-bwin_benchmark.csv  dfn-bwin_benchmark_v2.csv  first_5_simulation_times_cpp.csv  first_5_simulation_times_cpp_v2.csv  first_5_simulation_times_multiprocessing_cpp.csv  polska_availability_cpp.csv  polska_benchmark.csv  polska_benchmark_v2.csv  summary.csv  summary_multiprocessing_cpp.csv  summary_multithreading_cpp.csv
src/: availability_evaluation.py  benchmark.cpp  bindings.cpp  cutsets.py  python_bindings.cpp  rbd.cpp  rbd_bool.cpp  rbd_utility.cpp  unit_test.cpp  utiliy.cpp
src/unit_test/: bridge_rbd.json
topologies/: bridge_rbd.json  bridge_rbd_copy.json  bridge_rbd_test.json  example_rbd_01.json  example_rbd_02.json  example_rbd_03.json  first_5_simulation_times.xlsx  first_5_simulation_times_multiprocessing.xlsx  first_5_simulation_times_multithreading.xlsx
topologies/Abilene/: Abilene.json  Abilene_availability.xlsx
topologies/Germany_17/: Germany_17.json  Germany_17_availability.xlsx
topologies/Germany_50/: mincutsets_Germany_50.csv
topologies/HiberniaUk/: HiberniaUk.json  HiberniaUk_availability.xlsx
topologies/Nobel_EU/: mincutsets_Nobel_EU.csv  mincutsets_Nobel_EU50.csv
topologies/dfn-bwin/: dfn-bwin.json  dfn-bwin_availability.xlsx
topologies/polska/: polska.json  polska_availability.xlsx
